--- a/blog/2023-05-06-0.55.0.md
+++ b/blog/2023-05-06-0.55.0.md
@@ -1,35 +1,40 @@
 ---
-slug: release-notes-0.56.0
-title: Release Notes 0.56.0
+slug: release-notes-0.55.0
+title: Release Notes 0.55.0
 authors: sat
-tags: [release notes, portal, 0.56.0]
+tags: [release notes, portal, 0.55.0]
 ---
 
-Release 0.56.0 brings beautiful wallboards and bugfixes
+Release 0.55.0 brings SIP trunks and initial version of wallboards.
 
 ### Enhancements:
 
-* ICAP-1592 Dashboard shows 0 in DIDs statistics if DID component is restricted by API role
-* ICAP-1633 Show time intervals for auto-attendant menus based on the value of period
-* ICAP-1081 Highlight the tab with an error to help users understand why their changes cannot be saved
+* ICAP-28 Allow users to change their first or expired password
+* ICAP-1251 Shared line appearance
+* ICAP-1659 Force clear cache and hard reload when there's a version mismatch
+* ICAP-1676 Add a warning to Reset 2FA key dialogue
+* ICAP-1804 Add validation for a port range used with SIP contact
+* ICAP-1814 Add validation for duplicate web logins and invalid web passwords
 
 <!--truncate-->
-### Bugfixes:
 
-* ICAP-1636 The quick access panel overlaps the dashboard
-* ICAP-1726 Disable the Save button for widget dialogues if their mandatory fields are not filled in
-* ICAP-1757 Show "Transfer to fax mailbox" instead of "Transfer to voicemail" if fax_only_mode is inherited by the auto-attendant from its product
-* ICAP-1828 Remove the unnecessary scroll for the call volumes widget
-* ICAP-1836 Fields are jumping on validating the port for SIP contact
-* ICAP-1842 Tab names for SIP trunk details and AA menu
-* ICAP-1847 Impossible to assign device lines to extensions except for the first line
-* ICAP-1851 Device name is shown like model if the same device has several lines assigned to the same extension
-* ICAP-1852 Unassigned device is cached after re-opening the Assign device dialogue
-* ICAP-1860 Cannot upload MOH for call queue in Ring Group on CloudPBX UI
-* ICAP-1854 Layout issues on the dashboard
-* ICAP-1855 Extension is not shown for an active call
-* ICAP-1861 The Save button is active for the dialogue even if no changes are made for a device/port assigned to an extension
-* ICAP-1865 The call queue on-hold music is disabled after a ringback tone is changed for the same ring group
-* ICAP-1866 Link in "Access to the extension portal" section does not redirect to tab Device
-* ICAP-1867 Number of calls checkbox is missing for Call volumes widget
-* ICAP-1869 Enabled "Number of calls" option of a call volume widget is reset when the "Show" filter changes its value
+
+**Bugs:**
+
+* ICAP-1830 Prohibit to change a user's role when permissions are View only
+* ICAP-1552 Add white spaces to time intervals in German and Portuguese
+* ICAP-1591 Use the same style for confirmation dialogs to delete an auto-attendant menu
+* ICAP-1668 Size of the selectors that set hours for call screening time intervals
+* ICAP-1734 Warning about unsaved changes appears after deleting an entity with unsaved changes
+* ICAP-1753 Auto-generate a web password with the length defined by option Web.PasswordMinLength
+* ICAP-1756 Remove undefined from the action of an auto-attendant menu for event:f
+* ICAP-1803 Default protocol is not shown when enabling SIP contact
+* ICAP-1827 Layout issue with a very small-size donut сhart
+* ICAP-1829 Restrict changes of a forwarding mode for a View-only permission
+* ICAP-1831 Widget to monitor call volumes can be created without default options
+* ICAP-1838 "Selected extensions/ring" group and "Time range" are validated as empty even after they were filled in
+* ICAP-1841 Fix the warning for the dialog to reset the 2FA key
+* ICAP-1845 Fix the styling of the hint on tab Extension
+* ICAP-1850 Assigned extension is not shown in "Edit line" dialogue on device page
+* ICAP-1857 Errors on attempt to save auto-generated new password in "My profile"
+* ICAP-1858 Incorrect password length is used to generate and validate user password
