Adding 1.3.0 release notes

--- a/blog/2023-08-08-1.2.1.md
+++ b/blog/2023-08-08-1.2.1.md
@@ -1,45 +1,41 @@
 ---
-slug: release-notes-1.1.1
-title: Release Notes 1.1.1
+slug: release-notes-1.2.1
+title: Release Notes 1.2.1
 authors: sat
-tags: [release notes, portal, 1.1.1]
+tags: [release notes, portal, 1.2.1]
 ---
 
-Release 1.1.1 brings new functionality and bugfixes. Minimal PortaSwitch version is MR106.
+Release 1.2.1 brings new functionality and bugfixes. Minimal PortaSwitch version is MR106.
 
 ### Enhancements:
-- ICAP-1280 Round quantity to 2 decimal places
-- ICAP-1522 Dispatch calls to busy agents of a call queue
-- ICAP-1630 Allow users to configure options for callers to exit a call queue
-- ICAP-1758 Disable "Transfer to voicemail" action in the menu if unified messaging is disabled for this auto-attendant
-- ICAP-1762 Add a new field for a user to reconfirm a new password from My profile
-- ICAP-1810 Add a loading mask for wallboard widgets
-- ICAP-1848 Hide "Edit" buttons for the list of assigned devices if shared line is disabled
-- ICAP-1856 Localization of supervised calls
-- ICAP-1905 Change the color of the account Registered status from grey to green
-- ICAP-1912 Fetch a list of auto-attendants by applying service_features_filter for auto_attendant
-- ICAP-1932 Allow users to control on-hold music setting for auto-attendants
-- ICAP-1948 Fetch the list of extensions that have voicemail enabled for the configuration of a call queue
+- ICAP-1661 Add filter Queued for call states in Current calls
+- ICAP-1260 Hints for controls with read-only permission based on portal view permissions
+- ICAP-1794 Show messages that inform users about errors on other tabs
+- ICAP-1959 Show calls on hold for a ring group
 
 <!--truncate-->
 ### Bugfixes:
-- ICAP-1484 Restrict the short code change if it is set for a call screening mode in use
-- ICAP-1770 Make it possible to delete the last forwarding rule in the list for the follow-me/advanced forwarding modes
-- ICAP-1820 Use permissions configured for user's details
-- ICAP-1821 Use permissions for 2FA configured for My profile/Security
-- ICAP-1822 Disable input fields if view-only permissions are set for Company info
-- ICAP-1891 Add localization for the device upload error
-- ICAP-1900 Show error "The limit of fax mailboxes is exceeded, choose another product" if the limit of fax mailboxes is reached or exceeded
-- ICAP-1903 Add "get_main_office_huntgroups":1 param to Customer/get_huntgroup_list calls for Wallboard
-- ICAP-1915 Fetch a full list of available accounts for SIP contact setting without aliases
-- ICAP-1920 Remove ring group numbers from the list of current calls
-- ICAP-1921 Add a white space before the link to Google Authenticator App
-- ICAP-1944 Wrong values in the dropdown menu for Take action options
-- ICAP-1945 Fetch more than 50 extensions for the configuration of a call queue
-- ICAP-1946 Re-name the selector from Extension number to Extension
-- ICAP-1954 Prohibit to change a user's role when permissions are View only
-- ICAP-1956 Prohibit users to set 0 for "Interval between announcements" and "Timeout for caller input"
-- ICAP-1957 Wrong units are used for "Timeout for caller input" in call queue settings
-- ICAP-1963 Some extensions cannot be chosen as option for "Redirect to extension" in call queue configuration
-- ICAP-1964 Impossible to change call queue settings
-- ICAP-1965 Validation error for "Maximum waiting time" is too close to other fields if "Announce estimated wait time" is enabled
+- ICAP-1961 Crop too long Inventory ID in the list of devices
+- ICAP-1587 Crop long names of devices and show full names in a tooltip
+- ICAP-1735 Extra blinking window appears on attempt to delete extension from ring group
+- ICAP-1741 Infinite loading animation when refresh icons are clicked for several Extensions or SIP trunks in a row
+- ICAP-1752 Add front-end validation for PIN codes to access voicemail of auto-attendants
+- ICAP-1859 Make it possible to log in if a web password is shorter than 6 symbols
+- ICAP-1870 Update voicemail settings using the new account ID after an extension number is changed
+- ICAP-1871 Avoid duplicate error messages under fields and in snackbars for auto-attendants and faxes
+- ICAP-1879 Filtered DIDs list is preserved when reopening DIDs page
+- ICAP-1881 Total shows registered trunks and extensions without relation to the set filters
+- ICAP-1882 Wrong total is shown for a while after removing extension from the list
+- ICAP-1883 Errors in console and double reloading after saving unsaved device changes
+- ICAP-1898 Error on attempt to open fax after confirming saving unsaved changes
+- ICAP-1914 Show the full instructions in the dialogue to upload device for German and Portuguese
+- ICAP-1935 Change the button label from "Close" to "Cancel" for dialogues to transfer a call and add a participant to the conference call
+- ICAP-1938 Extension and group are cached if a dialog was closed without confirming Transfer or Adding participant to the conference
+- ICAP-1939 Localize "call_supervision" for column Destination in the list of current calls
+- ICAP-1941 Prohibit users to disconnect calls when Control calls node has view-only permission
+- ICAP-1942 DID number is assigned to an extension that was previously selected in the Add new DID number dialogue closed without saving
+- ICAP-1950 Allow users to filter the list of accounts that can be used in SIP contact by an account ID
+- ICAP-1958 Impossible to enable permanent ringing for calls dispatched to an extension via a ring group
+- ICAP-1966 Remove the char counters for the inputs with up/down arrows in the call queue configuration
+- ICAP-1967 Remove the validation error after an extension is selected for the call queue configuration
+- ICAP-1970 Issues with validation errors for DTMF code field in call queue configuration
