--- a/blog/2024-03-01-1.9.1-news.md
+++ b/blog/2024-03-01-1.9.1-news.md
@@ -1,5 +1,5 @@
 ---
-slug: release-notes-1.9.1
+slug: whats-new-0.59.x-1.9.x
 title: Discover What's New! 0.59.x-1.9.x Changelog
 authors: sat
 tags: [release notes, portal, 1.9.1]
