Add link to the video in blog 2024-03-01-1.9.1-news

--- a/blog/2024-03-01-1.9.1-news.md
+++ b/blog/2024-03-01-1.9.1-news.md
@@ -11,7 +11,7 @@ Let's dive in and explore the incredible enhancements awaiting you:
 <!--truncate-->
 
 ### Import Extensions Effortlessly
-Now, CloudPBX administrators can easily import extensions from a CSV file using our streamlined process. This will vastly simplify the process of setting up a cloud PBX environment for new business customers – especially when they are switching to your CSP from another provider. In this video, we explain all the benefits of this useful new feature and answer a few FAQs.
+Now, CloudPBX administrators can easily import extensions from a CSV file using our streamlined process. This will vastly simplify the process of setting up a cloud PBX environment for new business customers – especially when they are switching to your CSP from another provider. [In this video](https://www.youtube.com/watch?v=3dBe6o9eIO0), we explain all the benefits of this useful new feature and answer a few FAQs.
 ![](./img/ImportExtensionsEffortlessly.png)
 
 ### Flexible Portal Configuration for SIP Trunk Management
