Add Dmytro and correct authorship

--- a/blog/2024-03-01-1.9.1-news.md
+++ b/blog/2024-03-01-1.9.1-news.md
@@ -1,7 +1,7 @@
 ---
 slug: whats-new-0.59.x-1.9.x
 title: Discover What's New! 0.59.x-1.9.x Changelog
-authors: sat
+authors: mitchell
 tags: [release notes, portal, 1.9.1]
 ---
 
