Adding link to youtube in release notes 1.9.1

--- a/blog/2024-03-01-1.9.1-news.md
+++ b/blog/2024-03-01-1.9.1-news.md
@@ -59,3 +59,5 @@ Let call center managers easily monitor the performance of agents with the new r
 ### Billing Transparency
 Prepaid customers whose taxes are assessed at the moment of payment, will now clearly see that their taxes will be calculated and added to the amount charged with auto-payments. This will help you avoid disputes and ensures the billing transparency.
 ![](./img/BillingTransparency.png)
+
+This overview is also available as a short [YouTube video](https://www.youtube.com/watch?v=3dBe6o9eIO0).
