Adding What's New! 1.9.x-3.3.x Changelog fixup

--- a/blog/2025-03-14-1.9.x-3.3.x.md
+++ b/blog/2025-03-14-1.9.x-3.3.x.md
@@ -5,7 +5,7 @@ authors: mitchell
 tags: [release notes, portal, 3.3.5]
 ---
 
-Exciting updates ahead! CloudPBX portal 3.3.5 is here for you, and it's all about making your customers' experience smoother, smarter, and more efficient. We've fine-tuned the platform with new features and optimizations based on what matters most to you. Dive in and see the difference!
+Exciting updates ahead! CloudPBX portal 3.3.5 is here for you, and it's all about making your customers' experience smoother, smarter, and more efficient. We've fine-tuned the platform with new features and optimizations based on what matters most to you. Dive in and see the difference! This article summarizes the changes in the portal between PortaSwitch MR110 and MR115.
 
 <!--truncate-->
 
