Auto-Dialer documentation

--- a/blog/2025-03-14-1.9.x-3.3.x.md
+++ b/blog/2025-03-14-1.9.x-3.3.x.md
@@ -33,7 +33,7 @@ Now, users can easily see the real-time availability of their colleagues when tr
 
 ![](./img/team_mate_status_transfer.png)![](./img/team_mate_status_conference.png)
 
-### **Call Console with Real-Time Updates**
+### Call Console with Real-Time Updates
 
 Now, users can see a list of active calls that is constantly updated in real time, meaning there is no longer any need for time-consuming manual refreshes. Managers and supervisors can see changes in call status, call duration, and agent involvement as they happen, without any delays. So if a call is transferred or an agent joins a conference call, those updates will immediately appear in the Call Console. This allows your cloud PBX and call center customers to monitor and manage calls with greater accuracy and efficiency. In [this video](https://www.youtube.com/watch?v=nxF-urxkLgc), we demonstrate the way managers can use the new real-time information display to stay on top of call activity. Say goodbye to manual refreshes and hello to instant updates on call statuses, durations, and agent activity—instantly.
 
